# network-scripts

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json  pyproject.toml
docs/adr/: 0001-replace-scripts-with-uv-managed-python-cli.md
docs/agents/: domain.md
issues/done/: 001.md
scripts/: dump-cisco-config.exp  dump-cisco-config.py  dump-cisco-config.sh  explain-cisco-config.py  watch-serial-devices.sh
src/network_scripts/: __init__.py  cisco_dump.py  cisco_explain.py  cli.py  serial_devices.py
tests/: test_cisco_dump.py  test_cisco_explain.py  test_cli.py  test_readme.py  test_serial.py
