[project]
name = "network-scripts"
version = "0.1.0"
description = "Utilities for Cisco Device console workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "typer>=0.12.0",
]

[project.scripts]
network-scripts = "network_scripts.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
